# new_use_case

./: .gitignore  main.py  pyproject.toml
auth/: hashing.py  jwt_handler.py
backend/: config.py  db.py  dependency.py  logging_config.py  main.py  pyproject.toml  schema.py  utils.py
backend/auth/: jwt_handler.py
backend/middleware/: authorizationMiddleware.py  loggingMiddleware.py
backend/models/: refresh_token.py  user.py
backend/repositories/: generic_crud.py
backend/routes/: auth.py
backend/services/: user.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/app/: hooks.ts  routes.tsx  store.ts
frontend/src/common/DataModels/: User.ts
frontend/src/components/: RequireAuth.tsx
frontend/src/features/auth/components/: Login.tsx  Logout.tsx  Register.tsx
frontend/src/features/auth/services/: authApi.ts
frontend/src/features/auth/slices/: authSlice.ts
middleware/: authorizationMiddleware.py
models/: refresh_token.py
repositories/: common_commit.py  generic_crud.py
routes/: user.py
services/: user.py
